[gd_scene load_steps=23 format=2]

[ext_resource path="res://PlayerM/PlayerShip.tscn" type="PackedScene" id=1]
[ext_resource path="res://material/character pic/AGI .png" type="Texture" id=2]
[ext_resource path="res://Test/BB.tscn" type="PackedScene" id=3]
[ext_resource path="res://panal.png" type="Texture" id=4]
[ext_resource path="res://Test/Main.gd" type="Script" id=5]
[ext_resource path="res://Test/bbspownlimit.gd" type="Script" id=6]
[ext_resource path="res://BulletManager.gd" type="Script" id=8]
[ext_resource path="res://GameSceen.gd" type="Script" id=9]
[ext_resource path="res://material/Animation/Background/Sprite-0005.png" type="Texture" id=10]
[ext_resource path="res://material/Animation/Background/Sprite-0006.png" type="Texture" id=11]
[ext_resource path="res://material/Animation/Background/Sprite-0007.png" type="Texture" id=12]
[ext_resource path="res://material/Animation/Background/Sprite-0003.png" type="Texture" id=13]
[ext_resource path="res://material/Animation/Background/Sprite-0004.png" type="Texture" id=14]
[ext_resource path="res://EnemyManager.tscn" type="PackedScene" id=15]
[ext_resource path="res://material/Voice/Nation.mp3" type="AudioStream" id=18]
[ext_resource path="res://Test/Arrowshooter.tscn" type="PackedScene" id=19]
[ext_resource path="res://material/newpng/ugmenubg.png" type="Texture" id=20]
[ext_resource path="res://ShootingUpgrade.tscn" type="PackedScene" id=21]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "Background",
"speed": 0.5
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.76316, 10 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 20 )
region_rect = Rect2( 18, 19, 464, 939 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Mainsceen" type="Node2D"]
script = ExtResource( 9 )

[node name="BackgroundAnimetion" type="AnimatedSprite" parent="."]
light_mask = 2
position = Vector2( 96, 208 )
scale = Vector2( 4.17614, 3.88322 )
frames = SubResource( 2 )
animation = "Background"
speed_scale = 2.0

[node name="PlayerShip" parent="." groups=["player"] instance=ExtResource( 1 )]
position = Vector2( 120, 248 )
scale = Vector2( 0.249588, 0.25 )

[node name="Arrowshooter" parent="PlayerShip" instance=ExtResource( 19 )]
position = Vector2( 0, 32 )

[node name="BBcontroller" type="Node2D" parent="."]
position = Vector2( 0, -16 )
script = ExtResource( 5 )

[node name="BB" parent="BBcontroller" instance=ExtResource( 3 )]
position = Vector2( 48, 504 )
scale = Vector2( 0.5, 0.5 )

[node name="Bblimit" type="Area2D" parent="BBcontroller"]
scale = Vector2( 1.00997, 1.70636 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BBcontroller/Bblimit"]
position = Vector2( 161.022, -11 )
scale = Vector2( 24.1045, 1.49332 )
shape = SubResource( 1 )

[node name="SpawnTimer" type="Timer" parent="BBcontroller"]
wait_time = 0.104

[node name="BulletManager" type="Node2D" parent="."]
script = ExtResource( 8 )
MAX_LENGTH = 20

[node name="Line2D" type="Line2D" parent="BulletManager"]
width = 2.0

[node name="Timer" type="Timer" parent="BulletManager"]

[node name="RayCast2D" type="RayCast2D" parent="BulletManager"]

[node name="EnemyManager" parent="." instance=ExtResource( 15 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 312, 280 )
scale = Vector2( 1.36687, 0.983736 )
current = true

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -25.055

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="Panel" type="PanelContainer" parent="CanvasLayer"]
margin_left = 368.0
margin_right = 913.0
margin_bottom = 254.0
rect_scale = Vector2( 0.731, 1 )
custom_styles/panel = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
margin_right = 545.0
margin_bottom = 643.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Panel/VBoxContainer"]
margin_right = 545.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
color = Color( 0.419608, 0.215686, 0.215686, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CanvasLayer/Panel/VBoxContainer"]
visible = false
position = Vector2( 262.654, 104 )
scale = Vector2( 1.01001, 0.390625 )
frames = SubResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 204.0
margin_right = 545.0
margin_bottom = 643.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 439.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
color = Color( 0.521569, 0.4, 0.4, 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 531.0
margin_bottom = 439.0

[node name="ShootingUpgrade" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer/VBoxContainer2" instance=ExtResource( 21 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 477.0
margin_bottom = 35.0

[node name="Control" type="Control" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 39.0
margin_right = 477.0
margin_bottom = 439.0
rect_min_size = Vector2( 0, 400 )

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 312, 280 )
scale = Vector2( 2.07479, 1.27826 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 496, 496 )
region_filter_clip = true

[connection signal="timeout" from="BBcontroller/SpawnTimer" to="BBcontroller" method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="BulletManager/Timer" to="BulletManager" method="_on_Timer_timeout"]
